# log.rs

./: README.md  TODO.md  Taskfile.dist.yaml  deny.toml  rustfmt.toml
backpack/: Cargo.toml
backpack/benches/: logging_bench.rs
backpack/examples/: README.md  modern-logger-with-fields.rs  modern-logger.rs  simple-logger.rs
backpack/src/: banner.rs  lib.rs
backpack/src/banner/: mod.rs  tests.rs
backpack/src/config/: mod.rs
backpack/src/logging/: README.md  behavior_tests.rs  log.rs  mod.rs  tests.rs
backpack/src/logging/backends/: mod.rs  modern.rs  simple.rs
backpack/src/logging/engines/: README.md
backpack/src/logging/engines/yonasBSD/: README.md
backpack/src/logging/fields/: events.rs  levels.rs  mod.rs
backpack/src/logging/internal/: enums.rs  globals.rs  log.rs  logproxy.rs  mod.rs  proxy.rs  utils.rs
backpack/src/logging/loggers/: format.rs  mod.rs  modern.rs  screen.rs  simple.rs
backpack/src/logging/printers/: json.rs  mod.rs  task_tree.rs
backpack/src/logging/progress/: mod.rs
backpack/src/logging/tests/: behavior.rs  general.rs  mod.rs  progress.rs  roadmap.rs  unit.rs
backpack/src/logging/tests/archive/: behavior.rs  progress.rs  unit.rs
backpack/src/logging/tests/archive/common/: mod.rs
backpack/src/logging/tests/behavior/: json_format.rs  mod.rs  printer_behavior.rs  structured_fields.rs
backpack/src/logging/tests/behavior/snapshots/: log_rs__logging__tests__behavior__json_format__json_format_behavior_tests__json_mode_errors_are_valid_json_snapshot.snap  log_rs__logging__tests__behavior__json_format__json_format_behavior_tests__json_mode_includes_structured_fields_snapshot.snap  log_rs__logging__tests__behavior__json_format__json_format_behavior_tests__json_mode_outputs_json_for_spans_snapshot.snap  log_rs__logging__tests__behavior__json_format__json_format_behavior_tests__json_mode_produces_valid_json_snapshot.snap  log_rs__logging__tests__behavior__structured_fields__structured_fields_tests__json_mode_emits_structured_fields_on_drop_snapshot.snap  log_rs__logging__tests__behavior__structured_fields__structured_fields_tests__json_mode_ok_event_fields.snap  log_rs__logging__tests__behavior__structured_fields__structured_fields_tests__json_mode_structured_fields_via_drop_snapshot.snap  log_rs__logging__tests__behavior__structured_fields__structured_fields_tests__text_mode_emits_fields_for_debug_and_trace_in_verbose_modes-2.snap  log_rs__logging__tests__behavior__structured_fields__structured_fields_tests__text_mode_emits_fields_for_ok_warn_err_events-2.snap  (+8 more)
backpack/src/logging/tests/common/: capture.rs  mock_logger.rs  mod.rs  printer.rs
backpack/src/logging/tests/core/: concurrency_loom.rs  enums.rs  mock_logger.rs  mod.rs  printer_core.rs
backpack/src/logging/tests/formatters/: mod.rs  modern_logger.rs  simple_logger.rs
backpack/src/logging/tests/integration/: integration.rs
backpack/src/logging/tests/progress/: mod.rs  progress_api.rs
backpack/src/logging/tests/roadmap/: mod.rs  roadmap.rs
backpack/src/logging/tests/spans/: mod.rs  spans_and_tasks.rs  timing.rs
(+52 files in other folders)
