[package]
name = "log-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Logging framework"
repository = "https://github.com/yonasBSD/log.rs"
readme = "README.md"
keywords = ["logging", "logs", "rust"]
categories = ["development-tool", "development-tools::debugging"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
cliclack = { git = "https://github.com/yonasBSD/cliclack", branch = "yonasBSD", optional = true }
console-subscriber = { version = "0.5.0", optional = true }
env-rs = { git = "https://github.com/yonasBSD/env.rs", version = "0.1.0" }
once_cell = "1.21.3"
predicates = { version = "3", features = ["diff", "color"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
terminal-banner = { version = "0.4.1", features = ["color"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[features]
default = ["modern"]
modern = ["dep:cliclack"]
tokio-console = ["dep:console-subscriber"]

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
pretty_assertions = "1"
predicates = "3"
proptest = "1"
loom = "0.7"
double = "0.2"
test-case = "3"
serial_test = "3"
serde_json = "1"        # already used in your tests
serde = { version = "1", features = ["derive"] }
gag = "1.0.0"
criterion = "0.8.1"

[[bench]]
name = "logging_bench"
harness = false
